Fixed images on mobile.

--- a/src/styles/ImageModal.css
+++ b/src/styles/ImageModal.css
@@ -12,15 +12,18 @@
 }
 
 .image-modal-content {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 95%;
+  max-height: 95vh;
   height: auto;
   width: auto;
+  position: relative;
 }
 
 .image-modal-img {
   width: 100%;
-  height: 80vh;
+  height: auto;
+  max-height: 90vh;
+  object-fit: contain;
   border-radius: 8px;
 }
 
